Update and Rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GlassNGears</title>
   </head>
   <body>
-    <img src="C:\Users\Asus\Desktop\HTML\IMAGES\936616_819797244797107_3653496921134440552_n.png" alt="Profile Picture">
+    <img src="IMAGES\936616_819797244797107_3653496921134440552_n.png" alt="Profile Picture">
     <h1>GlassNGears</h1>
     <hr size="5" color="Black">
     <h2>Swaraj Chakraborty</h2>
@@ -200,19 +200,12 @@
     <table>
       <tr Cellspacing="2">
         <td>
-          <a href="C:\Users\Asus\Desktop\HTML\Contact Details.html">Contact Details</a>
+          <a href="Contact Details.html">Contact Details</a>
         </td>
         <td>
-          <a href="C:\Users\Asus\Desktop\HTML\Form.html">Message Me</a>
+          <a href="Form.html">Message Me</a>
         </td>
       </tr>
     </table>
-
-
-
-
-
-
-
   </body>
 </html>
