--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     <table>
       <tr Cellspacing="2">
         <td>
-          <a href="Contact Details.html">Contact Details</a>
+          <a href="contact details.html">Contact Details</a>
         </td>
         <td>
-          <a href="Form.html">Message Me</a>
+          <a href="form.html">Message Me</a>
         </td>
       </tr>
     </table>
